# kagome

./: .gitmodules  CMakeLists.txt
core/libp2p/: CMakeLists.txt  config.hpp  host_builder.cpp  host_builder.hpp
core/libp2p/crypto/: key.hpp  key_marshaller.hpp
core/libp2p/crypto/key_generator/: key_generator_impl.cpp
core/libp2p/crypto/key_marshaller/: key_marshaller_impl.cpp  key_marshaller_impl.hpp
core/libp2p/crypto/key_validator/: key_validator_impl.cpp
core/libp2p/crypto/protobuf/: keys.proto  protobuf_key.hpp
core/libp2p/host/basic_host/: CMakeLists.txt  basic_host.cpp  basic_host.hpp
core/libp2p/injector/: host_injector.hpp  network_injector.hpp
core/libp2p/multi/: hash_type.hpp
core/libp2p/muxer/yamux/: yamux_frame.cpp  yamux_frame.hpp  yamuxed_connection.cpp  yamuxed_connection.hpp
core/libp2p/peer/: identity_manager.hpp  peer_id.cpp  peer_id.hpp
core/libp2p/peer/impl/: identity_manager_impl.cpp  identity_manager_impl.hpp
core/libp2p/protocol/echo/: server_echo_session.cpp  server_echo_session.hpp
core/libp2p/protocol/identify/: identify_msg_processor.cpp
core/libp2p/protocol_muxer/multiselect/: message_manager.cpp  multiselect.cpp
core/libp2p/security/plaintext/: exchange_message_marshaller.hpp  exchange_message_marshaller_impl.cpp  exchange_message_marshaller_impl.hpp  plaintext.cpp  plaintext.hpp  plaintext_connection.cpp  plaintext_connection.hpp  plaintext_session.cpp
example/libp2p/: CMakeLists.txt  libp2p_client.go  libp2p_example_util.hpp  libp2p_server.cpp
example/libp2p/echo/: CMakeLists.txt  libp2p_server.cpp
(+89 files in other folders)
